# knock-knock

./: Cargo.toml  Dockerfile  LICENSE.txt  README.md  add-joke.sh  add-jokes.sh  askama.toml  compose.yaml  test-api.py
.github/workflows/: ci.yaml
assets/joke-working/misc/: boo.json
assets/jokes/: alligator.json  andrew.json  aristophanes.json  banana.json  beets.json  boo.json  broken-pencil.json  candice.json  cargo.json  comb.json  dwayne.json  hatch.json  havana.json  isabel.json  justin-hug.json  ken-house.json  kenya.json  kiwi.json  little-old-lady.json  sparrow.json  wendy.json  who.json
assets/jokes/la-jolla/: jokes.txt  to_json.py
assets/jokes/la-jolla/jokes/: a-herd.json  abe.json  ada.json  adore.json  al.json  alex-here.json  alma.json  alpaca.json  amanda.json  amarillo.json  amish.json  amy.json  annie-door.json  annie-line.json  atch.json  barbie.json  bear.json  bed.json  ben.json  broccoli.json  burglar.json  caesar.json  cash.json  cd.json  cheese.json  chick.json  cow-go.json  defense.json  dewey.json  donut.json  doris.json  dozen.json  dwayne.json  eileen.json  etch.json  europe-not.json  europe-poo.json  feline.json  fish.json  frog.json  (+34 more)
assets/static/: knock-knock.css
assets/templates/: index.html  tell.html
db/: password.txt
db/migrations/: 0001_create.sql
joke-working/: jokebase-saved.json
joke-working/parade/jokes/: nobel.json
jokes/: abbey.json  alex-door.json  alien.json  anita.json  armageddon.json  avenue.json  bacon.json  bee.json  beef.json  billy-bob-joe-penny.json  butter.json  canoe.json  cargo.json  claire.json  dishes.json  doctor.json  figs.json  frank.json  from.json  honey-bee.json  ice-cream.json  joe.json  juneau.json  ken-here.json  kent.json  ketchup.json  leaf.json  lettuce.json  luke.json  mikey.json  mustache.json  nana.json  olive-too.json  oslo.json  owl.json  paws.json  pie.json  police-in.json  pudding.json  radio.json  (+8 more)
migrations/: 0001_create.down.sql  0001_create.up.sql  0002_passwords.down.sql  0002_passwords.up.sql  0002_users.up.sql
src/: api.rs  appstate.rs  auth.rs  authjwt.rs  joke.rs  jokebase.rs  main.rs  startup.rs  web.rs
